# gcd

./: README.rst  pyproject.toml  requirements.txt
gcd/: gcd.py
tests/: test_gcd.py
