[tool.poetry]
name = "GCD"
version = "0.1.0"
description = ""
authors = ["teo <teodantes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
gcd = "gcd.gcd:start"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
